fix: processing notification close button visibility

--- a/src/generic/processing-notification/ProccessingNotification.scss
+++ b/src/generic/processing-notification/ProccessingNotification.scss
@@ -1,3 +1,9 @@
 .processing-notification-icon {
   animation: rotate 1s linear infinite;
 }
+
+.processing-notification-hide-close-button {
+  .btn-icon {
+    display: none;
+  }
+}
